<resources>
    <string name="app_name">Energy Monitor</string>
    <string name="action_sign_in_short">Cadastrar</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Falha na autenticação, confira seu email e senha ou cadastre-se!</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Apagar conta</string>
    <string name="new_pass">Nova senha</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Cadastre-se</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Senha</string>
    <string name="hint_name">Nome</string>
    <string name="btn_login">Entrar</string>
    <string name="prompt_password">Por favor entrar com sua senha</string>
    <string name="btn_link_to_register">Cadastre-se</string>
    <string name="btn_link_to_login">Voltar</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Esqueceu sua senha?</string>
    <string name="btn_reset_password">Enviar</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Salvar alterações</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remover</string>
    <string name="btn_sign_out">Sair</string>
    <string name="lbl_forgot_password">Esqueceu sua senha?</string>
    <string name="forgot_password_msg">Preencha seu email para enviarmos as instruções do reset de senha.</string>
    <string name="email_id">Email ID</string>
    <string name="consumo">Meu Consumo</string>
    <string name="gastos">Gastos</string>
    <string name="perfil">Meu Perfil</string>
    <string name="ajuste">Ajustes</string>
    <string name="telefone">Telefone</string>
    <string name="name">Nome</string>
    <string name="nascimento">Nascimento</string>
    <string name="kwh">R$/kWh</string>
    <string name="icms">ICMS(%)</string>
    <string name="pis">PIS(%)</string>
    <string name="cofins">COFINS(%)</string>
    <string name="precokwh">Preço por Kwh</string>
    <string name="impostos">Impostos</string>
    <string name="medidor">Medidor</string>
    <string name="serie">Serie</string>
</resources>
