<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.energymonitor.MainActivity">

    <TextView
        android:id="@+id/useremail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/old_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="76dp"
        android:layout_marginBottom="57dp"
        android:gravity="center"
        android:hint="@string/email_id"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/imageGastos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <ImageButton
        android:id="@+id/imageConsumo"
        android:layout_width="0dp"
        android:layout_height="160dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="37dp"
        android:layout_marginLeft="37dp"
        android:layout_marginEnd="19dp"
        android:layout_marginRight="19dp"
        android:layout_marginBottom="397dp"
        android:scaleType="fitCenter"
        android:src="@mipmap/consumo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageGastos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/useremail"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textConsumo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginLeft="37dp"
        android:layout_marginEnd="19dp"
        android:layout_marginRight="19dp"
        android:gravity="center"
        android:text="@string/consumo"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/textGastos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageConsumo" />

    <ImageButton
        android:id="@+id/imageGastos"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginRight="35dp"
        android:layout_marginBottom="5dp"
        android:scaleType="fitCenter"
        android:src="@mipmap/gastos"
        app:layout_constraintBottom_toTopOf="@+id/textGastos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageConsumo"
        app:layout_constraintTop_toBottomOf="@+id/useremail" />

    <TextView
        android:id="@+id/textGastos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginBottom="54dp"
        android:gravity="center"
        android:text="@string/gastos"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/imageAjuste"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textConsumo"
        app:layout_constraintTop_toBottomOf="@+id/imageGastos" />

    <ImageButton
        android:id="@+id/imagePerfil"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="37dp"
        android:layout_marginLeft="37dp"
        android:layout_marginEnd="19dp"
        android:layout_marginRight="19dp"
        android:scaleType="fitCenter"
        android:src="@mipmap/perfile"
        app:layout_constraintBottom_toBottomOf="@+id/imageAjuste"
        app:layout_constraintEnd_toStartOf="@+id/imageAjuste"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageAjuste" />

    <TextView
        android:id="@+id/textPerfil"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginLeft="37dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="19dp"
        android:layout_marginRight="19dp"
        android:gravity="center"
        android:text="@string/perfil"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/textAjuste"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagePerfil" />

    <ImageButton
        android:id="@+id/imageAjuste"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginBottom="1dp"
        android:contentDescription=""
        android:scaleType="fitCenter"
        android:src="@mipmap/ajustes"
        app:layout_constraintBottom_toTopOf="@+id/textAjuste"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imagePerfil"
        app:layout_constraintTop_toBottomOf="@+id/textGastos"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textAjuste"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginBottom="124dp"
        android:gravity="center"
        android:text="@string/ajuste"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textPerfil"
        app:layout_constraintTop_toBottomOf="@+id/imageAjuste" />

</android.support.constraint.ConstraintLayout>
